# YuHuang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  pyproject.toml
conf/: config.yaml
src/backend/: asr_engine.py  audio_capture.py  llm_optimizer.py  main.py  unix_server.py
src/engine/: CMakeLists.txt  yuhuang-addon.conf.in  yuhuang-inputmethod.conf  yuhuang.conf  yuhuang_engine.cpp  yuhuang_engine.h  yuhuang_socket.h  yuhuang_state.h
src/tools/: memory_watchdog.py  yuhuang_ctl.py
