# YuHuang Backend - Speech Recognition + LLM Optimization Service
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yuhuang-backend"
version = "0.2.0"
description = "YuHuang voice input method backend: FunASR + VAD + LLM optimization"
requires-python = ">=3.11"
dependencies = [
    "funasr>=1.2.7",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "pynput>=1.7.7",
    "sounddevice>=0.5.1",
    "pyyaml>=6.0",
]

[project.scripts]
yuhuang-backend = "backend.main:main"
yuhuang-ctl = "tools.yuhuang_ctl:main"

[tool.setuptools.packages.find]
where = ["src"]
